2017-11-21  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document hard-coded 'data_coding' value
      for SMPP's meta-data group.
      
2017-10-13  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'const' directive in context
      group 'smpp-tlv'.
    * gw/smsc/smpp_pdu.[ch]: implement smpp_tlv_add_constant() to add any
      configured constant values if the corresponding TLV values have not been
      set via the meta-data part.
    * gw/smsc/smsc_smpp.c: call smpp_tlv_add_constant() to set contant values.
    * gwlib/cfg.def: add 'const' to 'group = smpp-tlv'.
    
2017-09-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: fix segfaulting when under high load and stopping
      redis-server connections.

2017-07-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: Fixed sending of long messages.
      This fixes #769.

2017-06-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for config directives
      'ssl-[client|server]-cipher-list'.
    * gwlib/cfg.def: add above config directives to 'group = core'.
    * gwlib/conn.[ch]: ensure openssl engine cleanup is performed more cleanly,
      this avoids various static memory leaks reported by valgrind, and add
      encryption suite and cipher select/de-select configuration.
    This patchset allows configuring the SSL/TLS client/server side connection
    by defining which suites and ciphers should be used. The corresponding
    cipher stings are defined in the openssl documentation part.
    
2017-04-11  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: provides the missing MO part for the generic type
      from the patchset dated 2017-03-14, allowing to send UTF-8 data, which
      can then be forwarded as UCS-2 towards the smsbox connection. We transcode
      ONLY if an alt-charset is set and a coding value has been provided.
