@@ -1,3 +1,6 @@
+2017-11-21 Alexander Malysh <amalysh at kannel.org>
+    * gw/bb_smscconn.c: fixed copy & paste error. This fixes #772.
+
 2017-11-21  Stipe Tolj  <stolj at kannel.org>
     * doc/userguide/userguide.xml: document hard-coded 'data_coding' value
       for SMPP's meta-data group.
